--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
 <nav>
     <h3 class="nav-title">Sa<span class="text-primary" >j</span>ol</h3>
     <ul>
@@ -21,12 +21,14 @@
 </nav>
 <div class="banner">
     <div class="banner-content">
-        <h4>Hi, I am</h4>
-        <h1>Sajol</h1>
-        <p class="banner-description"></p>
+        <h4 class="banner-grettings dark-2">Hi, I am</h4>
+        <h1 class="banner-title dark-1">Sajol</h1>
+        <p class="banner-descriptions dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">Contact</button>
 
     </div>
-    <img src="images/Sajol-bg.png" alt="">
+    <img class="banner-image" src="images/hardy.png" alt="">
 </div>
     </header>
     <main>
