--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-background">
 <nav>
     <h3 class="nav-title">Sa<span class="text-primary" >j</span>ol</h3>
     <ul>
@@ -32,7 +32,58 @@
 </div>
     </header>
     <main>
+<section class="about secondary-background">
+    <h3 class="section-title">About me</h3>
+    <p class="section-description dark-3">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+    <div class="section-items">
+        <div class="about-item">
+            <p class="item-title dark-3">Name:</p>
+            <p class="item-descriptions">Sajol</p>
+        </div>
+        <div class="about-item">
+            <p class="item-title dark-3">E-mail:</p>
+            <p class="item-descriptions">sajolcast@gmail.com</p>
+        </div>
+        <div class="about-item">
+            <p class="item-title dark-3">Date of Birth:</p>
+            <p class="item-descriptions">27 October, 1998</p>
+        </div>
+        <div class="about-item">
+            <p class="item-title dark-3">From:</p>
+            <p class="item-descriptions">Khulna, Bangladesh</p>
+        </div>
+    </div>
+    
 
+</section>
+<!-- What I do Section -->
+ <section class="skills">
+    <h3 class="section-title dark-1">What I do</h3>
+    <p class="skill-description dark-3">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+    <div class="skill-items third-background">
+        <div class="skill-item">
+            <img src="./images/icons/js.png" alt="">
+            <p class="skill-title">Vanilla JavaScript</p>
+            <p class="skill-details dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-item">
+            <img src="./images/icons/react.png" alt="">
+            <p class="skill-title">React</p>
+            <p class="skill-details dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-item">
+            <img src="./images/icons/nodejs.png" alt="">
+            <p class="skill-title">Node.js</p>
+            <p class="skill-details dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-item">
+            <img src="./images/icons/mongo.png" alt="">
+            <p class="skill-title">MongoDB</p>
+            <p class="skill-details dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+
+    </div>
+ </section>
     </main>
     <footer>
 
